css styling and fixes for misaligned branch issues

--- a/src/Pages/ListItem/listing.css
+++ b/src/Pages/ListItem/listing.css
@@ -1,51 +1,89 @@
-.listings-title{
-    margin: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+.listings-title {
+  margin-top: 30px;
+  font-family: "Rubik", sans-serif;
+  font-size: 45px;
+  font-weight: bold;
+  color: hsl(180, 57%, 15%);
+  margin-bottom: 5px;
+  text-align: center;
 }
 
-.list-button{
-    display: flex;
-    justify-content: center;
-    border: none;
-    gap: 50px;
-    background-color: hsl(35, 73%, 88%);
-    padding: 10px;
-
+.list-button {
+  display: flex;
+  justify-content: center;
+  border: none;
+  gap: 50px;
+  padding: 20px;
 }
-.rent_sell-button{
-    border-radius: 18px;
-    border: none;
-    background-color: cadetblue;
-    height: 50px;
-    width: 200px;
-    font-size: 25px;
-    font-family:Arial, Helvetica, sans-serif;
+.rent_sell-button {
+  border-radius: 18px;
+  border: none;
+  background: linear-gradient(
+    135deg,
+    #70b3b5,
+    #4682b4
+  ); /* Subtle gradient for buttons */
+  height: 50px;
+  width: 200px;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
+  cursor: pointer;
+  transition: transform 0.2s ease, background-color 0.3s ease;
 }
 
+.rent_sell-button:hover {
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.5);
+  transform: translateY(-5px);
+  background: linear-gradient(135deg, hsl(26, 54%, 77%), hsl(180, 60%, 97%));
+  color: black;
+}
 
-.purchase-image{
-    width: 200px;
-    height: 200px;
-
+.purchase-image {
+  width: 200px;
+  height: 200px;
 }
 
 .tabs-container {
-    display: flex;
-    border-bottom: 2px solid #ccc;
-  }
-  
-  /* Style for each tab */
-  .tab {
-    padding: 10px 20px;
-    margin: 0 5px;
-    cursor: pointer;
-    font-weight: bold;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px 5px 0 0;
-    transition: background-color 0.3s ease;
-  }
+  display: flex;
+  border-bottom: 2px solid #ccc;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 15px;
+  border-bottom: 2px solid #ddd;
+  margin-bottom: 20px;
+}
 
-  .tab:hover {
-  background-color: #e0e0e0;
+/* Style for each tab */
+.tab {
+  padding: 10px 20px;
+  margin: 0 5px;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px 5px 0 0;
+  transition: background-color 0.3s ease;
+}
+
+.tab:hover {
+  background: linear-gradient(135deg, hsl(26, 54%, 77%), hsl(180, 60%, 97%));
+  color: hsl(180, 57%, 15%);
+}
+
+.noitems {
+  font-size: 40px;
+  font-family: "Rubik", sans-serif;
+  margin: 30px;
+}
+
+.active-tab {
+  background: linear-gradient(
+    135deg,
+    #70b3b5,
+    #4682b4
+  ); /* Subtle gradient for buttons */
+  color: #fff;
 }
